Fix created date wrapping

--- a/node-src/styles.pcss
+++ b/node-src/styles.pcss
@@ -104,6 +104,10 @@ select#additional-collections-selection {
   td {
     white-space: normal !important;
   }
+
+  td.whitespace-nowrap {
+    white-space: nowrap !important;
+  }
 }
 
 /* spinner code, see https://loading.io/css/ */
